force-app/main/default/objects/Off_boarding_Request__c/Off_boarding_Request__c.object-meta.xml
<CustomObject>
    <label>Offboarding Request</label>
    <nameField>
        <displayFormat>OBR{000000}</displayFormat>
        <label>Off boarding Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Offboarding Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>