force-app/main/default/objects/Off_boarding_Request__c/fields/Exit_Interview_Date__c.field-meta.xml
<CustomField>
    <fullName>Exit_Interview_Date__c</fullName>
    <label>Exit Interview Date</label>
    <type>Date</type>
</CustomField>