force-app/main/default/objects/Off_boarding_Request__c/fields/Feedback_From_Resource__c.field-meta.xml
<CustomField>
    <fullName>Feedback_From_Resource__c</fullName>
    <label>Feedback From Resource</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>