force-app/main/default/objects/Off_boarding_Request__c/fields/Final_Pay_Check__c.field-meta.xml
<CustomField>
    <fullName>Final_Pay_Check__c</fullName>
    <label>Final Pay Check</label>
    <type>Date</type>
</CustomField>