force-app/main/default/objects/Off_boarding_Request__c/fields/Last_Day_Of_Work__c.field-meta.xml
<CustomField>
    <fullName>Last_Day_Of_Work__c</fullName>
    <label>Last Day Of Work</label>
    <type>Date</type>
</CustomField>