force-app/main/default/objects/Off_boarding_Request__c/fields/Offboarding_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Offboarding_Approved_Date__c</fullName>
    <label>Offboarding Approved Date</label>
    <type>Date</type>
</CustomField>