force-app/main/default/objects/Off_boarding_Request__c/fields/Reason_For_Offboarding__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Offboarding__c</fullName>
    <label>Reason For Offboarding</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Resignation</fullName>
            </value>
            <value>
                <fullName>Termination</fullName>
            </value>
            <value>
                <fullName>Retirement</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>