force-app/main/default/objects/Off_boarding_Request__c/fields/Request_Approver__c.field-meta.xml
<CustomField>
    <fullName>Request_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Request Approver</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Off boarding Requests (Request Approver)</relationshipLabel>
    <relationshipName>Off_boarding_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>