force-app/main/default/objects/Off_boarding_Request__c/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <label>Resource</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Off boarding Requests</relationshipLabel>
    <relationshipName>Off_boarding_Requests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>