force-app/main/default/objects/Off_boarding_Request__c/fields/Service_Request__c.field-meta.xml
<CustomField>
    <fullName>Service_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Request</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Off boarding Requests</relationshipLabel>
    <relationshipName>Off_boarding_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>